--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/12bool.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title> <!--TITOLOOOOOOOOO---></title>
+    <title> (insicurissimo) password generator</title>
 </head>
 <body>
-  <header>
 
-  </header>
-  <main>
+<p id="myid"></p>  
 
-  </main>
-  <footer>
-    
-  </footer>
+  <script type="text/javascript" src="js/script.js"></script>
+  
 </body>
 </html>
